--- a/projects/ngx-i24-progress-bar/src/lib/ngx-i24-progress-bar.component.scss
+++ b/projects/ngx-i24-progress-bar/src/lib/ngx-i24-progress-bar.component.scss
@@ -8,9 +8,9 @@
     align-items: center; 
     max-width:100%;
     transition: width .5s ease-in-out;
-        gap: 10px;
+    gap: 10px;
 } 
-.progress {
+.p {
     height: 100%;
     border-radius: inherit;
     max-width: 100%;
